--- a/IFT215-Project/src/taxescalculation/taxes.form
+++ b/IFT215-Project/src/taxescalculation/taxes.form
@@ -119,6 +119,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="submit"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="submitbutActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="yearlysalarytxtfield">
           <Properties>
