--- a/IFT215-Project/src/taxescalculation/taxes.form
+++ b/IFT215-Project/src/taxescalculation/taxes.form
@@ -199,7 +199,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JEditorPane" name="amountPane1">
+                <Component class="javax.swing.JEditorPane" name="amountPane">
                 </Component>
               </SubComponents>
             </Container>
